Style: Fix various small UI inconsistencies (#4616)
* Style Fix: Remove unnecessary padding from mobile tabs

* Style Fix: Even padding on tabs

* Style Fix: Unify mid content box color with the rest of the UI

* Style Fix: Adjust PID/Rateprofile selection

* Style Fix: Large overhaul of PID Tuning tab

* Style Fix: Prevent width shifting when ARM prevention flags change

* Style Fix: Unify presets dropdown with pid/rateprofile dropdown

* Style Fix: Adjust motor settings layout and improve spacing

* Style Fix: Use custom scrollbar not just for tabs

* Style Fix: Correct parent element hiding for auto disarm delay input

* Style Fix: Improve layout and spacing for help icons in configuration inputs

* Style Fix: Update small button styles

* Style Fix: Replace 'select' with 'number' for GPS configuration

* Style Fix: Re-adjust spacing for motor/esc settings

* Style Fix: Address SonarCloud

* Fix: Re-name JS selectors to match updated classes

* Fix: Forgot dots

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -23,6 +23,14 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+
+    ::-webkit-scrollbar {
+        width: 0.3rem;
+        height: 2em;
+    }
+    ::-webkit-scrollbar-thumb {
+        background: var(--surface-600);
+    }
 }
 &::backdrop {
     background-image: none;
@@ -197,9 +205,16 @@ input[type="number"] {
         padding-bottom: 0;
         margin-bottom: 0;
     }
-    .helpicon,
     label {
         margin: 0 !important;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+    }
+    .helpicon {
+        margin-right: 7px !important;
+        margin-left: auto !important;
+        float: none;
     }
 }
 .clear-both {
@@ -664,16 +679,7 @@ input[type="number"] {
     width: 17rem;
     overflow: auto;
     padding: 1rem;
-    padding-right: 0.5rem;
     background-color: var(--surface-100);
-
-    &::-webkit-scrollbar {
-        width: 0.3rem;
-        height: 2em;
-    }
-    &::-webkit-scrollbar-thumb {
-        background: var(--surface-600);
-    }
 }
 
 #content {
@@ -963,6 +969,7 @@ dialog {
     background-color: var(--primary-transparent-2);
     border: 1px solid var(--primary-500);
     margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
     border-radius: 0.5rem;
     padding: 0.5rem;
 }
@@ -971,6 +978,7 @@ dialog {
     border: 1px solid var(--error-600);
     color: #fff;
     margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
     border-radius: 0.5rem;
     padding: 0.5rem;
 }
@@ -1274,6 +1282,7 @@ dialog {
     .select {
         display: flex;
         gap: 1rem;
+        align-items: center;
     }
 }
 .fixed_band {
@@ -1999,7 +2008,6 @@ each(range(12), {
         font-size: 13px;
         padding-top: 0.2rem;
         padding-bottom: 0.25rem;
-        padding-left: 2.5rem;
     }
     #side_menu_swipe {
         display: block;
