--- a/src/css/tabs/setup.less
+++ b/src/css/tabs/setup.less
@@ -62,6 +62,13 @@
         flex-direction: row;
         justify-content: center;
     }
+
+    .system_info {
+        td {
+            width: 50%;
+            vertical-align: baseline;
+        }
+    }
 }
 #accel_calib_running {
     display: none;
